--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -42,7 +42,7 @@
         <h3>Sistema de Contactos</h3>
     </div>
     <div class="container">
-        <table class="table table-striped table-hover align-middle">
+        <table class="table table-striped table-hover align-middle table-bordered">
             <thead class="table-dark text-center">
             <tr>
                 <th scope="col">Id</th>
@@ -52,11 +52,11 @@
             </tr>
             </thead>
             <tbody>
-            <tr>
-                <th scope="row">1</th>
-                <td>Juan</td>
-                <td>666333222</td>
-                <td>juan@mail.com</td>
+            <tr th:each="contacto: ${contactos}">
+                <th th:text="${contacto.idContacto}" scope="row"></th>
+                <td th:text="${contacto.nombre}"></td>
+                <td th:text="${contacto.celular}"></td>
+                <td th:text="${contacto.email}"></td>
             </tr>
             </tbody>
         </table>
