Eleventht Commit Formulario Agregar conBootstrap y thymeleaf

--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -3,7 +3,7 @@
 <head th:replace="~{fragmentos/cabecero::cabecero-seccion(titulo='Inicio')}">
 </head>
 <body>
-
+<!--Div es del menu de navegacion-->
 <div th:replace="~{fragmentos/navegacion::navegacion-seccion}"/>
 <!--Div para desplegar la tabla-->
 <div class="container">
