Twelveth Commit, Agregar con Controlador Spring

--- a/src/main/resources/templates/agregar.html
+++ b/src/main/resources/templates/agregar.html
@@ -11,11 +11,11 @@
         <h3>Agregar Contacto</h3>
     </div>
     <div class="container">
-        <form>
+        <form action="/agregar" modelAttribute="contactoForma" method="post">
             <div class="mb-3">
                 <label for="nombre" class="form-label">Nombre</label>
                 <input type="text" class="form-control"
-                       id="nombre" name="nombre">
+                       id="nombre" name="nombre" required="true">
             </div>
             <div class="mb-3">
                 <label for="celular" class="form-label">Celular</label>
