Thirtyth Commit Boton Editar con Bootstrap y thymeleaf

--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -18,6 +18,7 @@
                 <th scope="col">Nombre</th>
                 <th scope="col">Celular</th>
                 <th scope="col">Email</th>
+                <th scope="col"></th>
             </tr>
             </thead>
             <tbody>
@@ -26,6 +27,12 @@
                 <td th:text="${contacto.nombre}"></td>
                 <td th:text="${contacto.celular}"></td>
                 <td th:text="${contacto.email}"></td>
+                <td class="text-center">
+                    <div class="container">
+                        <a th:href="@{/editar/{id}(id=${contacto.idContacto})}"
+                           class="btn btn-warning btn-sm me-3">Editar</a>
+                    </div>
+                </td>
             </tr>
             </tbody>
         </table>
